# claude-trader

./: .env.example  .gitignore  ARCHITECTURE_PLAN.md  ENHANCEMENT.md  README.md  app.py  phase_transition.py  pyproject.toml  run_signals.py  scheduler.py  signals.jsonl  streamlit_app.py  wheel_state.json
.claude/: settings.local.json
.streamlit/: config.toml
config/: put_credit_spread.toml  red_day_csp.toml  rsi2.toml  strategies.toml  wheel.toml
fixtures/: CALLX_ohlcv.json  CALLX_options.json  EMAFAIL_ohlcv.json  EMAFAIL_options.json  LOWCONF_ohlcv.json  LOWCONF_options.json  NVDA_ohlcv.json  NVDA_options.json  REDDIP_ohlcv.json  REDDIP_options.json  RSIFAIL_ohlcv.json  RSIFAIL_options.json  SPY_ohlcv.json  TLT_ohlcv.json  WXYZ_ohlcv.json  WXYZ_options.json  check.py  generate_fixtures.py  regen.py
iv_history/: AAPL.jsonl  AMZN.jsonl  CALLX.jsonl  EMAFAIL.jsonl  GOOGL.jsonl  INTC.jsonl  IWM.jsonl  LOWCONF.jsonl  META.jsonl  MSFT.jsonl  MU.jsonl  NVDA.jsonl  QQQ.jsonl  RSIFAIL.jsonl  SPY.jsonl  TSLA.jsonl  WXYZ.jsonl
scripts/: migrate_signals_jsonl.py  migrate_wheel_state.py  register_daily_task.ps1
src/: attribution.py  backtester.py  dashboard_data.py  earnings.py  exit_engine.py  indicator_engine.py  iv_history.py  logger.py  notifier.py  order_executor.py  pnl_ledger.py  position_pnl.py  positions.py  reconcile.py  risk_manager.py  router.py  signal_engine.py  signal_output.py  state_store.py  thesis_generator.py  watchdog.py
src/adapters/: alpaca_adapter.py  base.py  fixture_adapter.py
templates/: base.html  dashboard.html  ticker.html
(+43 files in other folders)
