[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "claude-trader"
version = "0.1.0"
description = "Wheel strategy signal system — Phase 1"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.13",
    "pandas>=2.0",
    "ta>=0.11",
    "pydantic>=2.0",
    "structlog>=24.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "py_vollib>=1.0.2",
    "APScheduler>=3.10",
    "jinja2>=3.0",
    "requests>=2.31",
    "streamlit>=1.35",
    "plotly>=5.20",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
